# interview_ai_assistant

./: .bazelrc  .editorconfig  .gitignore  .npmrc  BUILD.bazel  CHANGELOG.md  CHECKOUT_TROUBLESHOOTING.md  DEBUG_CHECKOUT.md  DEBUG_INVISIBLE.txt  DEBUG_REACT.txt  DESKTOP_BUILD.md  DESKTOP_BUILD_V2.md  DESKTOP_VERSION_README.md  ENV_CHECK_REPORT.md  FIND_FUNCTION_LOGS.md  GET_STARTED.txt  LICENSE  MODULE.bazel  OVERLAY_UPDATE.txt  PROMO_CODE_SETUP.md  PROMPT_OPTIMIZATION.md  Procfile  QUICKSTART.md  QUICK_FIX_CHECKOUT.md  QUICK_UPDATE_SUMMARY.txt  README.md  README_LOCAL_TEST.md  ROUTE_FIX.txt  RUN_DEV_SERVER.md  SCROLL_FIX.txt  STABLE_FIX_SUMMARY.txt  START_HERE.md  STRIPE_SETUP.md  SUPABASE_EMAIL_VERIFICATION.md  SUPABASE_SETUP.md  TRANSPARENT_DEBUG.txt  USAGE.md  USER_AUTH_GUIDE.md  VERCEL_500_ERROR_FIX.md  VERCEL_API_TROUBLESHOOTING.md  (+36 more)
api/: BUILD.bazel  index.py  requirements.txt  requirements_conservative.txt  stripe_webhook.py  test_api.py  test_minimal.py
api/test_minimal/: index.py  requirements.txt
api/webhooks/: requirements.txt  stripe.py  test.py  test_handler.py  test_local.py  test_vercel_format.py
backend/: BUILD.bazel  README.md  auth_supabase.py  build_backend.spec  database_schema.sql  db_models.py  db_operations.py  db_operations_test.py  db_supabase.py  env.example  fix_plan_inconsistency.py  main.py  payment_stripe.py  payment_stripe_test.py  requirements.txt  setup_key.py  speech.py  start.py  test_db_operations.py  token_estimator.py  vision.py
backend/migrations/: BUILD.bazel  add_internal_plan_and_monthly_quota.sql  add_monthly_tokens_used.sql  add_next_plan_cancel_at_period_end_stripe_event_ts.sql  add_next_update_at.sql  add_plan_expires_at_if_missing.sql  add_start_plan.sql  add_ultra_plan.sql  add_weekly_tokens_used.sql  check_all_users_next_update_at.sql  check_all_users_plan_expires.sql  check_canceled_subscriptions_without_expiry.sql  check_constraint_values.sql  check_current_fields.sql  check_next_plan_constraint.sql  check_plan_expires_at.sql  check_users_plan_summary.sql  check_users_with_expiring_plans.sql  fix_plan_default_value.sql  fix_policy_conflicts.sql  fix_starter_plan_values.sql  migrate_starter_to_start_and_add_ultra.sql  verify_schema_states.sql  view_all_plans.sql
backend/tests/integration/: BUILD.bazel  README.md  SETUP.md  checkout_api__test.py  conftest.py  db_smoke__test.py  nginx.test.conf  run_tests.py  stripe_webhook_api__test.py  subscription_flows__test.py  test_schema.sql  webhook_dedup__test.py
backend/utils/: BUILD.bazel  time.py
docs/: AUTO_HEIGHT_FIX.txt  CODE_FORMAT_FIX.txt  CONTRIBUTING.md  CSS_HEIGHT_FIX.txt  DEBUG_CHECKOUT.md  DEBUG_GUIDE.txt  DEBUG_WHITE_SCREEN.md  DESKTOP_ARCHITECTURE.md  DESKTOP_BUILD.md  DESKTOP_VERSION_README.md  EMERGENCY_FIX.txt  FINAL_FIX_SUMMARY.txt  MSIX_CERTIFICATE_SETUP.md  OVERLAY_TOP_UPDATE.txt  PREVENT_DUPLICATE_FIX.txt  PROJECT_STRUCTURE.md  PROMO_CODE_SETUP.md  README.md  REFACTORING_SUMMARY.md  SCENE_PROMPT_FEATURE.md  SIMPLE_FORMAT.md  STRIPE_SETUP.md  TEXT_COLOR_FIX.txt  TOKEN_CALCULATION_LOGIC.md  TRAFFIC_FLOW.md  UPDATE_NOTES.txt
electron/: main.js  preload.js  whisper_local.py
installer/: DesktopAI.iss
launcher/: Launcher.cs  Launcher.csproj  README.md  build_launcher.spec  launcher.py
resources/: README.md
resources/tiles/: README.md
scripts/: README_MSIX_CERT.md  build-desktop-v2.bat  build-desktop-v2.sh  build-desktop.bat  build-desktop.sh  build-electron.bat  build.bat  cleanup.bat  cleanup.sh  convert-png-to-ico.ps1  create-env.bat  find-and-install-certificate.ps1  fix-dependencies.bat  fix-electron-paths.js  generate-certificate.ps1  generate-tile-icons.ps1  install-certificate.ps1  install.bat  restart-backend.bat  setup-msix-certificate.bat  start-all.bat  start-backend-dev.bat  start-backend-with-logs.bat  start-backend.bat  start-backend.sh  start-frontend.bat
src/: App.css  App.tsx  AppRouter.tsx  AuthCallback.tsx  Checkout.css  Checkout.tsx  Contact.css  Contact.tsx  Download.css  Download.tsx  Help.css  Help.tsx  Landing.css  Landing.tsx  Login.css  Login.tsx  Overlay-new.tsx  Overlay-old.tsx  Overlay.css  Overlay.tsx  Plans.css  Plans.tsx  Profile.css  Profile.tsx  Success.css  Success.tsx  index.css  main.tsx
src/components/: ContactDialog.css  ContactDialog.tsx  CustomPromptDialog.css  CustomPromptDialog.tsx  Header.css  Header.tsx  PlanCard.css  PlanCard.tsx  PlanSelector.css  PlanSelector.tsx  PromptEditor.css  PromptEditor.tsx  QuotaCard.css  QuotaCard.tsx  ReportButton.css  ReportButton.tsx  ScenarioEditDialog.css  ScenarioEditDialog.tsx  ScenarioSelector.css  ScenarioSelector.tsx  SceneManager.css  SceneManager.tsx  SceneSelector.css  SceneSelector.tsx  Settings.css  Settings.tsx  SettingsDialog.css  SettingsDialog.tsx  ShortcutsDialog.css  ShortcutsDialog.tsx
src/components/Profile/: AccountInfoCard.css  AccountInfoCard.tsx  CurrentPlanCard.css  CurrentPlanCard.tsx  ProfileBase.css  ProfileHeader.css  ProfileHeader.tsx  QuotaUsageCard.css  QuotaUsageCard.tsx  TopNav.css  TopNav.tsx  UsageCard.css  UsageCard.tsx
src/constants/: download.ts
src/lib/: api.ts  auth.ts  sceneStorage.ts  supabase.ts
src/styles/: colors.css
src/types/: scenes.ts  window.d.ts
src/utils/: isElectron.ts
