# Filegroup containing all SQL migration files
filegroup(
    name = "migrations",
    srcs = glob(["*.sql"]),
    visibility = ["//visibility:public"],
)

# Individual migration files can also be referenced if needed
filegroup(
    name = "add_next_update_at",
    srcs = ["add_next_update_at.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_internal_plan_and_monthly_quota",
    srcs = ["add_internal_plan_and_monthly_quota.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_monthly_tokens_used",
    srcs = ["add_monthly_tokens_used.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_plan_expires_at_if_missing",
    srcs = ["add_plan_expires_at_if_missing.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_start_plan",
    srcs = ["add_start_plan.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_ultra_plan",
    srcs = ["add_ultra_plan.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "add_weekly_tokens_used",
    srcs = ["add_weekly_tokens_used.sql"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "migrate_starter_to_start_and_add_ultra",
    srcs = ["migrate_starter_to_start_and_add_ultra.sql"],
    visibility = ["//visibility:public"],
)

# Check and fix migration files
filegroup(
    name = "check_migrations",
    srcs = glob(["check_*.sql"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "fix_migrations",
    srcs = glob(["fix_*.sql"]),
    visibility = ["//visibility:public"],
)

# View migrations
filegroup(
    name = "view_migrations",
    srcs = glob(["view_*.sql"]),
    visibility = ["//visibility:public"],
)

